完善文档，新增唐诗爬虫代码

--- a/document/异常情况及解决方案记录.md
+++ b/document/异常情况及解决方案记录.md
@@ -1,4 +1,4 @@
-# mysql连接异常
+# mysql
 
 ## 异常 1：
 ### 具体报错信息
@@ -12,3 +12,16 @@
 `java.sql.SQLException: Access denied for user ''@'183.6.141.9'`
 ### 解决方案
 yml文件里DataSource不是name而是username
+
+
+# Maven
+## 异常 1：
+### 具体原因：
+maven打包会先进行测试。
+### 解决方案
+在pom.xml里增加
+```xml
+<properties>
+    <skipTests>true</skipTests>
+</properties>
+```
