--- a/document/数据库结构.md
+++ b/document/数据库结构.md
@@ -25,11 +25,12 @@ insert into primary_school_poem(title,author,content,mean,kind,url) values ('山
 
 ## 唐诗三百首
 ```mysql
-create table tan_poem(
+create table tang_poem(
   id int primary key  AUTO_INCREMENT,
   title varchar(40) comment '题目',
   author varchar(10) comment '作者',
-  content varchar(200) comment '内容',
-  mean varchar(200) comment '释义'
+  content varchar(1000) comment '内容',
+  mean varchar(1000) comment '释义',
+  url varchar(120) comment '诗词对应网址'
 );
 ```
