更改为使用JsonUtil工具类

--- a/document/异常情况及解决方案记录.md
+++ b/document/异常情况及解决方案记录.md
@@ -25,3 +25,13 @@ maven打包会先进行测试。
     <skipTests>true</skipTests>
 </properties>
 ```
+
+# Mybatis
+安装IDEA插件 Free Mybatis Plugin便于开发
+
+## 异常 1
+### 具体原因：
+mapper报错，可以编译，但是看着不舒服
+
+### 解决方案
+修改IDEA setting inspection里spring bean的报错级别为warning
