--- a/document/接口文档.md
+++ b/document/接口文档.md
@@ -1,5 +1,5 @@
 ## 获取所有
-请求格式：`/wepoem/getall(GET)`
+请求格式：`/poem/all(GET)`
 
 返回格式：
 ```json
@@ -7,6 +7,22 @@
   {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"},
   {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"},
   {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"}
+]
+```
 
+## 根据种类获取
+请求格式：`/poem/kind(POST)`
+```json
+{
+   "kind" : "一年级上册"
+}
+```
+
+返回格式：
+```json
+[
+  {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"},
+  {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"},
+  {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"}
 ]
 ```
