更新接口文档

--- a/document/接口文档.md
+++ b/document/接口文档.md
@@ -14,7 +14,7 @@
 请求格式：`/poem/kind(POST)`
 ```json
 {
-   "kind" : "一年级上册"
+   "kind" : "一年级"
 }
 ```
 
@@ -23,6 +23,23 @@
 [
   {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"},
   {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"},
+  {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"}
+]
+```
+
+## 根据种类随机获取一首诗，要求不重复
+请求格式：`/poem/randomKind(POST)`
+```json
+{
+   "kind" : "一年级"
+}
+```
+
+返回格式：
+```json
+[
+  {"title":"xxx","author":"xxx","content":["a","b","c","d"],"mean":"xxx","kind":"xxx"},
+  {"title":"xxx","author":"xxx","content":["a","b","c","d"],"mean":"xxx","kind":"xxx"},
   {"title":"xxx","author":"xxx","content":"xxx","mean":"xxx","kind":"xxx"}
 ]
 ```
